// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/ItemMeta ItemMeta matches snapshot for failed 1`] = `
<table
  className="wrapper"
>
  <tbody>
    <tr>
      <td>
        Added
      </td>
      <td>
        3/29/2020, 2:30:45 PM
      </td>
    </tr>
    <tr>
      <td>
        Failed
      </td>
      <td>
        3/29/2020, 2:32:30 PM
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`components/ItemMeta ItemMeta matches snapshot for pending 1`] = `
<table
  className="wrapper"
>
  <tbody>
    <tr>
      <td>
        Added
      </td>
      <td>
        3/29/2020, 2:30:45 PM
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`components/ItemMeta ItemMeta matches snapshot for running 1`] = `
<table
  className="wrapper"
>
  <tbody>
    <tr>
      <td>
        Added
      </td>
      <td>
        3/29/2020, 2:30:45 PM
      </td>
    </tr>
    <tr>
      <td>
        Updated
      </td>
      <td>
        3/29/2020, 2:32:30 PM
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`components/ItemMeta ItemMeta matches snapshot for succeeded 1`] = `
<table
  className="wrapper"
>
  <tbody>
    <tr>
      <td>
        Added
      </td>
      <td>
        3/29/2020, 2:30:45 PM
      </td>
    </tr>
    <tr>
      <td>
        Completed
      </td>
      <td>
        3/29/2020, 2:32:30 PM
      </td>
    </tr>
  </tbody>
</table>
`;
